<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.starviewinc</groupId>
	<artifactId>star</artifactId>
	<version>1.00</version>

	<name>com.starviewinc.star</name>
	<packaging>jar</packaging>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<distributionManagement>
		<repository>
			<id>starview-repository</id>
		</repository>
	</distributionManagement>

	<dependencies>
		<dependency>
			<groupId>com.starview</groupId>
			<artifactId>asm-nolimit</artifactId>
			<version>0.2</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<testSourceDirectory>${project.basedir}/test/main/java</testSourceDirectory>
		<testResources>
			<testResource>
				<directory>${project.basedir}/test/main/resources</directory>
				<filtering>false</filtering>
			</testResource>
		</testResources>
		<resources>
			<resource>
				<directory>${project.basedir}/src/main/resources</directory>
				<filtering>false</filtering>
			</resource>
			<resource>
				<directory>META-INF</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.11</version>
				<configuration>
					<argLine>-Xmx3g -XX:MaxPermSize=256m -Dfile.encoding=UTF8 -XX:-DoEscapeAnalysis</argLine>
					<includes>
						<include>**/StarTestSuite.java</include>
					</includes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.5.1</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-antrun-plugin</artifactId>
				<executions>
					<execution>
						<id>${project.artifactId}-include-sources</id>
						<phase>process-resources</phase>
						<goals>
							<goal>run</goal>
						</goals>
						<configuration>
							<tasks>
								<copy todir="${project.build.outputDirectory}">
									<fileset dir="${project.build.SourceDirectory}" />
								</copy>
								<property environment="env" />
								<echo encoding="UTF-8" file="src/main/java/org/star_lang/star/Version.java"> 
package org.star_lang.star;

import java.util.logging.Logger;

public class Version
{
	public static final String version = "${project.version} ${env.BUILD_NUMBER}-${env.MERCURIAL_REVISION}";
	
	private static final Logger logger = Logger.getLogger(StarRules.class.getName());
	
	static {
	  logger.info("Star Compiler Version " + version);
	}
	
	public static void main(String[] args)
	{
	  System.out.println("Star Compiler version: " + version);
	  System.out.println("Starview Inc © 2013");
	}
}
								</echo>
							</tasks>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<repositories>
		<repository>
			<id>starview-libraries-repo</id>
			<url>http://repo.starviewinc.com/repo</url>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>starview-libraries-repo</id>
			<url>http://repo.starviewinc.com/repo</url>
		</pluginRepository>
	</pluginRepositories>

</project>
